# kavi-conf

./: .gitignore
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AttendeeInput.tsx  AttendeeSelect.tsx  AuthForm.tsx  BookRoomDialog.tsx  BookingCard.tsx  BookingManagementDialogs.tsx  BookingSuccessDialog.tsx  NavLink.tsx  ProtectedRoute.tsx  RetroBackground.tsx  RetroHeader.tsx  RoomCard.tsx  RoomDialogs.tsx
client/src/contexts/: AuthContext.tsx  BookingContext.tsx  WebSocketContext.tsx
client/src/hooks/: useWebSocket.ts
client/src/lib/: constants.ts
client/src/pages/: Admin.tsx  Agenda.tsx  Book.tsx  Index.tsx  Login.tsx  NotFound.tsx  Profile.tsx  (+2 more)
server/: .gitignore  README.md  debug_oauth_config.py  initial_data.py  main.py  makefile  pyproject.toml  requirements-dev.txt  verify_creds.py  verify_token_flow.py
server/app/api/v1/crud/: booking.py  booking_snippet.py  room.py  room_hold.py  user.py
server/app/api/v1/endpoint/: auth.py  bookings.py  rooms.py  users.py  websocket.py
server/app/core/: config.py  dbsession.py  security.py  tasks.py  websocket.py
server/app/db_models/: __init__.py  booking.py  booking_attendee.py  enums.py  room.py  room_hold.py  user.py
server/app/schema/: auth.py  booking.py  room.py
server/app/scripts/: verify_e2e_booking.py  verify_google_booking.py
server/app/utils/: email.py  google_calendar.py  logging.py  rate_limit.py  tz.py  validation.py
server/scripts/: fix_otp_schema.py  fix_rooms_schema.py
(+63 files in other folders)
